--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/runtime": "7.10.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "babel-runtime": "^6.26.0",
     "core-js": "3",
     "expo": "^38.0.0",
     "expo-ads-admob": "~8.2.1",
@@ -19,6 +21,7 @@
     "react-data-table-component": "^6.9.3",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
