--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -24,6 +24,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-safe-area-view": "^1.1.1",
