--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
-    "sequelize": "^6.2.3"
+    "sequelize": "^6.2.3",
+    "zipcodes": "^8.0.0"
   }
 }
