--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -10,14 +10,16 @@
   "dependencies": {
     "@babel/runtime": "7.10.4",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.6.1",
-    "@react-navigation/stack": "^5.6.2",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
+    "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/native": "^5.7.0",
+    "@react-navigation/stack": "^5.7.0",
     "babel-runtime": "^6.26.0",
     "core-js": "3",
     "expo": "^38.0.8",
     "expo-ads-admob": "~8.2.1",
-    "fsevents": "2",
-    "react": "^16.11.0",
+    "fsevents": "^2.1.3",
+    "react": "^16.13.1",
     "react-data-table-component": "^6.9.3",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
@@ -31,7 +33,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2",
     "styled-components": "^5.1.1"
