--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "babel-runtime": "^6.26.0",
@@ -31,6 +32,7 @@
     "react-native-safe-area-context": "^3.0.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
