--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -18,6 +18,7 @@
     "core-js": "3",
     "expo": "^38.0.8",
     "expo-ads-admob": "~8.2.1",
+    "expo-cli": "^3.22.3",
     "fsevents": "^2.1.3",
     "react": "^16.13.1",
     "react-data-table-component": "^6.9.3",
