--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -9,17 +9,20 @@
   },
   "dependencies": {
     "@babel/runtime": "7.10.4",
+    "@callstack/react-theme-provider": "^2.1.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "babel-runtime": "^6.26.0",
     "core-js": "3",
     "expo": "^38.0.8",
     "expo-ads-admob": "~8.2.1",
+    "expo-cli": "^3.22.3",
     "fsevents": "^2.1.3",
-    "react": "^16.13.1",
+    "react": "^16.11.0",
     "react-data-table-component": "^6.9.3",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
@@ -28,15 +31,20 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "^3.0.2",
+    "react-native-safe-area-context": "^3.0.7",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
+    "react-native-star-view": "^1.1.3",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-navigation-stack": "^2.8.2",
-    "styled-components": "^5.1.1"
+    "react-navigation-tabs": "^2.9.0",
+    "styled-components": "^5.1.1",
+    "zipcode": "^0.1.1",
+    "zipcodes": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
