--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -34,8 +34,8 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
-    "react-native-switch-selector": "^2.0.6",
     "react-native-star-view": "^1.1.3",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
@@ -49,6 +49,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@iconify/icons-ant-design": "^1.0.8",
+    "@iconify/react": "^1.1.3",
     "babel-preset-expo": "^8.2.3"
   },
   "private": true
