--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/material-bottom-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
-    "@react-navigation/stack": "^5.7.0",
+    "@react-navigation/stack": "^5.7.1",
     "babel-runtime": "^6.26.0",
     "core-js": "3",
     "expo": "^38.0.8",
@@ -34,6 +34,7 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-star-view": "^1.1.3",
     "react-native-switch-selector": "^2.0.6",
     "react-native-table-component": "^1.2.1",
