--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -27,6 +27,7 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
