--- a/mobileClient/package.json
+++ b/mobileClient/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.7.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.14",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "babel-runtime": "^6.26.0",
@@ -26,7 +27,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-paper": "^3.10.1",
+    "react-native-paper": "^3.11.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-safe-area-view": "^1.1.1",
